# cbramod_experiments

./: .gitignore  .pre-commit-config.yaml  DESIGN.md  Makefile  README.md  THIRD_PARTY_NOTICES.md  answers.md  debrief.md  instructions.md  main.py  pyproject.toml
cbramod_experiments/: __init__.py
cbramod_experiments/data_harmonization/: __init__.py  audit.py  datamodule.py  parallel.py  parity.py  pipeline.py  schema.py  transforms.py
cbramod_experiments/datasets/: __init__.py  shumi.py
cbramod_experiments/models/: __init__.py  cbramod.py  eegsimpleconv.py  factory.py
cbramod_experiments/utils/: __init__.py  benchmark.py  compare.py  config.py  data_benchmark.py  evaluate.py  metrics.py  reproduce.py  train.py  utils.py
configs/: cbramod.yaml  eegsimpleconv.yaml
notebooks/: harmonized_dataloader_benchmark.ipynb  shu_mi_data_exploration.html  shu_mi_data_exploration.ipynb
reports/: answers.md  instructions.md  part1.md  part2.md  shu_mi_reproduction.md  task_c_protocol.md
reports/results_cbramod/: shu_mi_5seed_report.md  shu_mi_5seed_summary.csv  shu_mi_5seed_summary.json  shu_mi_seed_metrics.csv
reports/results_eegsimpleconv/: shu_mi_5seed_report.md  shu_mi_5seed_summary.csv  shu_mi_5seed_summary.json  shu_mi_seed_metrics.csv
reports/results_models_comparison/: aggregate_metrics.csv  comparison.json  comparison.md
reports/task_c/: comparison.json  model_complexity.json  per_seed_comparison.csv
tests/: conftest.py  test_benchmark.py  test_checkpoint.py  test_compare.py  test_imports.py  test_metrics.py  test_models.py  test_preprocessing.py  test_reproduce.py  test_shu_data.py  test_training.py  test_training_configuration.py
tests/data_harmonization/: test_arrow_pipeline.py  test_arrow_training.py  (+8 more)
(+8 files in other folders)
